project(benchmark)

add_library(murmur MurmurHash2.h MurmurHash2.cpp)
add_executable(benchmark benchmark.cpp utils.h binarywrapper.cpp)
add_executable(int_benchmark int_benchmark.cpp utils.h binarywrapper.cpp)
target_link_libraries(int_benchmark PRIVATE ptrie murmur)
target_link_libraries(benchmark PRIVATE ptrie murmur)
if (MSVC)
    target_compile_options(int_benchmark PRIVATE /W4 /WX)
    target_compile_options(benchmark PRIVATE /W4 /WX)
else()
    target_compile_options(int_benchmark PRIVATE -Wall -Wextra -Wpedantic -Werror)
    target_compile_options(benchmark PRIVATE -Wall -Wextra -Wpedantic -Werror)
endif()
